--- a/txturnout.html
+++ b/txturnout.html
@@ -46,7 +46,7 @@ With one week to improve Value Voting's voter turnout prediction methodology, I 
 
 
       <section>
-<h2 id="getting-started">Exploring the Data</h2>
+<h2 id="getting-started">The Data</h2>
 
 <p>
 Value Voting supplied me with the 2016 voter registration role for the state of Texas, which includes the voter registration details for 14+ million Texans. Importantly, the data also included past election participation, for general & presidential (2008, 2012, 2016, etc.), midterm (2010, 2012, etc.) and primary elections. While voter registration, name, address, and past participation is publicly available, the dataset also included a number of externally sourced & engineered features, such as cell phone number, number of people in household, race, and gender.
@@ -54,7 +54,7 @@ Value Voting supplied me with the 2016 voter registration role for the state of 
 
 
 <p>
-I was additionally given a high-level summary of every past Texas election (Federal, State, & primaries), which included winner votes, runner-up votes, and total number of candidates running. For Texas State House and Senate primary races, I supplemented this election summary with other publicly available data, such as the total funds spent by various candidates.
+I was additionally provided with a high-level summary of every past Texas election (Federal, State, & primaries), which included winner votes, runner-up votes, and total number of candidates running. For Texas State House and Senate primary races, I supplemented this election summary with other publicly available data, such as the total funds spent by various candidates.
 </p>
 
 
@@ -69,7 +69,8 @@ I started by looking for high-level insights that would indicate any potential d
         </figure>
 
 
-<p>Unsurprisingly, people below the age of 30 tend to vote less than older people, though the trend does begin to turn over for people older than 70.</p>
+<p>The data confirms a general assumption that people above age 30 are more likely to vote than
+those under 30, though the trend begins to reverse at age 70.</p>
 
 
         <figure>
@@ -78,54 +79,57 @@ I started by looking for high-level insights that would indicate any potential d
 </figure>
 
 
-<p>As seen above, voter turnout also depends strongly on a given person’s voting history — people who voted in the past will tend to do so again, where voter turnout rate is segmented based on the number of previous votes (since 2000) someone has participated in<label for="sn-in-his-later-books" class="margin-toggle sidenote-number"></label> <span class="sidenote">This also conflates age with turnout rate, though — someone who has been able to vote in 6 votes as of 2016 must have been born in or before 1986 </span>.</p>
+<p>Voting history is also a strong indicator of future voting turnout patterns - people who voted in the past will likely do so again. Here, voter turnout rate is segmented based on the number of previous elections (since 2000) someone has participated in.<label for="sn-in-his-later-books" class="margin-toggle sidenote-number"></label> <span class="sidenote">This also conflates age with turnout rate, though — the older someone is, the more elections they will have been able to vote in. Someone born after 1986, on the other hand, has only been able to vote in 3 presidential elections. </span></p>
 
 
-<p>Finally, while analyzing the data, it also became clear that different districts (Federal and State) have large differences in the voter turnout rate. This could be due to a number of reasons -- different levels of enthusiasm for a given race, overall socioeconomic status, differences between ethnic groups, access to voting locations, etc. Since Value Voting is primarily interested in the voter turnout rate within individual districts, and I didn't have immediate access to this supplementary data, it made sense to separate this analysis by district, opposed to combining them all into a single model.
+<p>
+While analyzing the data, it became clear that different districts (Federal and State) display a wide variation in voter turnout rate. This could be due to a number of reasons - local enthusiasm for a given election, socioeconomic status, ethnic group identity, access to voting locations, etc. Since Value Voting is primarily interested in the voter turnout rate within individual districts, and I didn't have immediate access to this supplementary
+data, it made sense to separate this analysis by district, rather than combining them all
+into a single model.
 </p>
 
 
 </section>
 
       <section>
-        <h2 id="demographics">Demographics-Based Approach</h2>
+        <h2 id="demographics">Individual Voter Analysis</h2>
 
 <p>
-For my first approach to this problem, I opted for to focus on voter demographics. Here, I treat individual voters as the datapoints, and I classify whether they will vote or not in a future election based on their demographic features (age, sex, party affiliation) and their past voting history.
+For my first approach to this problem, I focused on voter demographics. Here, I treat individual voters as the datapoints, and I classify whether or not they will vote or not in a future election by their demographic features (age, gender, party affiliation) and past voting history.
 </p>
 
 <p>
-While this is a relatively straightforward binary classification problem, the main challenge lies in how to compress a person’s potentially complex voting history (composed of state and presidential primaries, and general elections) to one or a few meaningful quantitative features. I experimented with a number of approaches:
+While this is a relatively straightforward binary classification problem, the main challenge lies in how to compress a person’s potentially complex voting history (including state and presidential primaries, and general elections) down to one or a few meaningful quantitative features. I experimented with a number of approaches:
 <ul>
 <li>Last1: Did a person vote in the previous election?</li> 
 <li>LastX: Of the last X votes, how many did they vote in?</li>
-<li>Voting fraction: of the number of votes a person has been eligible for, what fraction did they vote in? </li>
-<li>Voting fraction + tscore: Here tscore is a quantitive value between 0 and 1 which expresses how recently a person’s votes have been<label for="sn-in-his-later-books" class="margin-toggle sidenote-number"></label> <span class="sidenote">For example is someone voted in 2014, but not in 2016, their voting fraction would be 0.5, but with a tscore of 0. The reverse -- voted 2016, not 2014 -- would result in a tscore of 1.  </span> </li>
-  <li>Individual binary 0 & 1 labels for each individual type of vote and how many votes ago in the past it was. </li>
+<li>Voting fraction: of the number of elections in which someone has been eligible to vote, what fraction did they go to the polls? </li>
+<li>Voting fraction + tscore: Here tscore is a quantitive value between 0 and 1 which expresses how recently someone has voted<label for="sn-in-his-later-books" class="margin-toggle sidenote-number"></label> <span class="sidenote">For example if someone voted in 2014, but not in 2016, their voting fraction would be 0.5, but with a tscore of 0. The reverse -- voted 2016, not 2014 -- would result in a tscore of 1.  </span> </li>
+  <li>Individual binary 0 & 1 labels for each type of election and how many election cycles have occurred since. </li>
  </ul>
 </p>
 
 <p>
-There is not too much difference between these approaches: all voting history features produce accuracies within 5% of each other. Overall, though, I find LastX with X=2 to produce near the best classification rates, and has the advantage of being relatively simple to understand and compute. Specifically, Last2 is the number of votes in the last two similar elections (midterm, primary, presidential) compared with the target variable.
+It turns out there is not too much difference between these approaches: all voting history features produce accuracies within 5% of each other. Overall, however, I find that LastX with X=2 to produces the best classification rates and has the advantage of being relatively simple to understand and compute. Specifically, Last2 is the number of votes in the last two similar elections (midterm, primary, presidential) compared with the target variable.
 </p>
 
 <p>
-For the classification, I began with logistic regression. It is fast to train, and highly interpretable. Overall, this dataset has many, many more samples than it does features (and potential combination of features), and thus the particular choice of algorithm did not significantly matter --- other more complex classification algorithms (random forest, SVM, etc.) did not produce significantly different levels of accuracy.
+For the classification, I began with logistic regression. It is fast to train, and highly interpretable. This dataset has many, many more samples than it does features (and potential combination of features), and thus the particular choice of algorithm did not significantly matter --- other more complex classification algorithms (random forest, SVM, etc.) all resulted in similar accuracy.
 </p>
 
 
 <p>
-Here I will focus on the prediction of Federal House races, though in principle this methodology would apply to any election: I train the model on whether or not someone voted in 2012 based on their past election activtiy. For validation, I test both on held-out 2012 data for use in tuning the model, and on 'unseen' 2016 election data, to gauge how well the model performs when working to predict future results. Primarily because past voting activity is such a good indicator of future activity, this approach does a fairly good job at predicting voter turnout. Overall, this model achieves accuracies of 78% for 2012 data, and 70% for the 2016 figures<label for="sn-in-his-later-books" class="margin-toggle sidenote-number"></label> <span class="sidenote">If I restrict my data to people with earlier voter registration dates, such that they have the opportunity to have a full Last2 score, the model accuracy jumps by nearly 10%  </span>; the F1 score, representing the harmonic mean of precision and recall, is 0.81.
+Here I focus on the prediction of Federal House races, though in principle this methodology would apply to any election; I train the model on whether or not someone voted in 2012 based on their past election activity. For validation, I tested both on held-out 2012 data for use in tuning the model and on 'unseen' 2016 election data to gauge how well the model performs when working to predict future results. Because past voting activity is such a good indicator of future activity, this approach is fairly accurate in predicting voter turnout. Overall, this model achieves accuracies of 78% for 2012 data, and 70% for the 2016 figures<label for="sn-in-his-later-books" class="margin-toggle sidenote-number"></label> <span class="sidenote">If I restrict my data to people with earlier voter registration dates, such that they have the opportunity to have a full Last2 score, the model accuracy jumps by nearly 10%  </span>; the F1 score, representing the harmonic mean of precision and recall, is 0.81.
 </p>
 
 <p>
-Along with a no vote/vote classification, logistic regression also supplies the confidence, in the form of a probability, of its prediction. The probability that someone is going to vote turns out to be an extremely useful metric for Value Voting and its customers since it enables microtargeting. Voter microtargeting is a deliberate focus on individual people or groups by political organizations based on their expected vote or propensity to visit the polls. For example, some organizations may wish to only reach out to those who are almost certain to vote in a forthcoming election, while other outreach campaigns may instead wish to target those on the fence about voting in an effort to increase turnout. If we classify ‘likely voters’ as those with a probability of voting (PV) of PV > 0.9, and ‘on the fence’ voters as those with 0.3 < PV < 0.6, we can immediately understand the characteristics of these two groups by segmenting our dataset.</p>
+Along with a no vote/vote classification, logistic regression also supplies the confidence, in the form of a probability, of its prediction. The probability that someone is going to vote turns out to be an extremely useful metric for Value Voting and its customers since it enables microtargeting: a deliberate focus on individual people or groups by political organizations based on their expected vote or propensity to visit the polls. For example, some organizations may wish to only reach out to those who are almost certain to vote in a forthcoming election, while other outreach campaigns hope to target those on the fence about voting in an effort to increase turnout. By classifying ‘likely voters’ as those with a probability of voting (PV) of PV > 0.9, and ‘on the fence’ voters as those with 0.3 < PV < 0.6, this model identifies the average characteristic of these two groups:</p>
 <p>
 Likely voters:
 <ul>
 <li>Average age of 60</li>
 <li>88% registered Democrats and Republicans</li>
-<li>Have voted an average of 84% of the time they’ve been eligible</li>
+<li>Have voted in an average of 84% of elections for which they were eligible</li>
 </ul>
 <p>
 On-the-fence voters:
@@ -138,7 +142,7 @@ On-the-fence voters:
 
 
 <p>
-Unfortunately, though, my goal here was to produce a model which exceeded Value Voting's current working model for the voter turnout rate -- one where the voting turnout rate does not change. Since the previous turnout rate effectively already encapsulates demographic information and voting history information, a demographics based approach represents a negligible improvement with respect predicting the overall voter turnout rate. I must attack this problem from a different angle.
+My goal here was to produce a more accurate model than Value Voting's current working model for the voter turnout rate (in which the voter turnout rate does not change). Since the previous turnout rate effectively already encapsulates demographic information and voting history information, a demographics based approach represents a negligible improvement with respect predicting the overall voter turnout rate. So I attacked the problem from a different anglge.
 <!..My model would only formally be better if demograhpics  
 
 simply using the past voting turnout rate for a similar election (midterm or presidential) is a fairly good approach in the . Adding in additional demograph .
@@ -155,7 +159,7 @@ simply using the past voting turnout rate for a similar election (midterm or pre
 <h2 id="getting-started">Election-Based Approach</h2>
 
 <p>
-To combat the limitations with the demographic-based plan described above, I experimented with alternative approachs based on broader, election-based characteristics to see if there were certain features that could be used to build a predictive model for future voter turnout rates. Using the corpus of 2012, 2014, and 2016 Texas-state House and Senate races<label for="sn-in-his-later-books" class="margin-toggle sidenote-number"></label> <span class="sidenote">Texas districts were redrawn in 2012, thus making extending this analysis back a much more complex endeavor.  </span>, I began to see if there was a correlation between the competitiveness of a race and the voter turnout race:
+To combat the limitations of the demographic-based plan, I experimented with alternative approaches based on broader, election-based characteristics to see if there were certain features that could be used to build a predictive model for future voter turnout rates. Using the corpus of 2012, 2014, and 2016 Texas-state House and Senate races<label for="sn-in-his-later-books" class="margin-toggle sidenote-number"></label> <span class="sidenote">Texas districts were redrawn in 2012, thus making extending this analysis back a much more complex endeavor.  </span>, I began to see if there was a correlation between the competitiveness of a race and the voter turnout rate:
 </p>
 
         <figure>
@@ -164,11 +168,11 @@ To combat the limitations with the demographic-based plan described above, I exp
         </figure>
 
 <p>
-Here, I'm showing a scatter plot of the voter turnout rate vs. vote margin for different election districts. Here, vote margin (which I use as a proxy for competitiveness) is the percent difference  of received votes between the race victor and the runner up, such that 0% would be a tie, and 100% is an uncontested race. There doesn’t seem to be much of a correlation, which came as a surprise: I would naively have expected close, competitive races to have attracted more people to the polls in a particular district.
+This scatter plot visualizes the voter turnout rate vs. vote margin for different election districts. In this instance, vote margin (which I use as a proxy for competitiveness) is the percent difference  of received votes between the race victor and the runner up, such that 0% would be a tie, and 100% is an uncontested race. There doesn’t seem to be much of a correlation, which came as a surprise: I had expected close, competitive races to attract more people to the polls in a particular district.
 </p>
 
 <p>
-However, different districts, with varied demographics (age distribution, income, density, etc.), likely have overall base voter turnout levels which may muddy the above analysis. Next, I took the districts which had the largest changes in voter turnout rates, to see if I could isolate what caused the change. Here is the voter turnout <i>change</i> between the 2012 and 2016 general election based on the competiveness of the equivalent 2012 election:
+However, districts with varied demographics (age distribution, income, density, etc.) were likely to have overall base voter turnout levels which may muddy the above analysis. I then took the districts which had the largest changes in voter turnout rates to see if I could isolate what caused the change. Here is the voter turnout <i>change</i> between the 2012 and 2016 general election based on the competiveness of the equivalent 2012 election:
 </p>
 
         <figure>
