--- a/about.html
+++ b/about.html
@@ -7,19 +7,23 @@ title: "About"
 <section class="content">
  <h1>About Me</h1>
 <br>
-  <p>Hello World. My name is Chalence Safranek-Shrader. I grew up in sunny Los Angeles, California, and
-    received my B.S. in astrophysics from UCLA in 2007. In 2014 I was awarded my Ph.D from the University 
-    of Texas at Austin where I was jointly advised by Volker Bromm and
+<p>Hello World. My name is Chalence Safranek-Shrader. I am currently a fellow at Insight Data Science where I am pleased to be making the
+transition from academia to industry. I am keen to apply my data
+analysis, statistics, and machine learning background to tackle
+interesting, business-oriented challenges.
+</p>
+
+
+<p>
+I hail from sunny Los Angeles, California,
+    received my B.S. in astrophysics from UCLA in 2007, and was awarded my Ph.D from the University 
+    of Texas at Austin in 2014 where I was jointly advised by Volker Bromm and
 Milos Milosavljevic. I then spent some time as a postdoctoral fellow
 at the University of California, Santa Cruz, and UC Berkeley where I
 worked with Mark Krumholz, Christopher McKee, and 
 Richard Klein.</p>
 
-<p>
-I am currently a fellow at Insight Data Science where I am pleased to be making the
-transition from academia to industry. I am keen to apply my data
-analysis, statistics, and machine learning background to tackle
-interesting, business-oriented challenges. 
+
 
 
  <p>Research wise, I was primarily interested in understanding how stars form across cosmic time - both at high redshifts and at the
